tdf#127069 sal: preserve gid of files in the unx osl_replaceFile()

The w32 implementation preserves all attributes of the destination
file, the unx one preserved none of them.

Bring the unx osl_replaceFile() closer to the w32 by preserving the gid
of the destination file as a start.

[ No testcase, we support building on systems where the user is part of
a single group only, and it's not possible to verify the effect of this
change in such environments. ]

(cherry picked from commit eedf523c123a82bf3cbc5f389783e22d75b2e2c5)

Change-Id: I722d4802df34caf71a9dc0db1a3df8b76acb9de6